@@ -1,4 +1,4 @@
-Domotion v1.1.2
+Domotion v1.2.1
 
 Domotion Home Control and Automation
 ======== ==== ======= === ==========
