@@ -1,3 +1,8 @@
+[B]1.2.1[/B]
+- Select fullchain.pem by default for ssl access
+- fixed bug introduced by python 3 conversion on editing process settings from web interface
+- fixed minor bug in controls display on web interface
+
 [B]1.2.0[/B]
 - Converted code to python 3
 - Added trusted apps that have access to all sensor and actuators and info, like basicwebaccess does.
